--- a/styles/style.css
+++ b/styles/style.css
@@ -81,9 +81,145 @@ header {
     transform-origin: top bottom;
 }
 
-
 /* Common Styles */
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
+}
+
+.container {
+    display: flex;
+    justify-content: flex-start;
+    align-content: center;
+}
+
+/* Box Button Styles */
+.box-button {
+    background-color: #161616;
+    border: 1px solid;
+    border-style: none;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    width: 312px;
+    height: 375px;
+    margin-left: 140px;
+}
+
+.button-style {
+    background-color: #FFFFFF;
+    border: 1px solid;
+    border-style: none;
+    border-radius: 10px;
+    margin: 30px 30px;
+    font-weight: 500;
+    font-size: 20px;
+    padding: 17px 40px;
+}
+
+/* Blogs Styles */
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    margin-top: -20px;
+    margin-right: 35px;
+}
+
+.blog {
+    border: 1px solid;
+    border-style: none;
+    width: 312px;
+    border-radius: 10px 10px 0px 0px;
+    background-color: #FFFFFF;
+    filter: drop-shadow(0px 5.34229px 13.3557px rgba(0, 0, 0, 0.123));
+    margin: 20px 24px;
+}
+
+.blog-info {
+    margin: 20px 0 0 20px;
+}
+
+.blog-title {
+    color: #161616;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.blog-bottom {
+    font-weight: 400;
+    font-size: 16px;
+    color: rgba(22, 22, 22, 0.7);
+    display: flex;
+}
+
+.message {
+    margin-left: 30px;
+}
+
+.distance {
+    margin-left: 10px;
+}
+
+/* Main Section End Button style */
+.view-button {
+    color: white;
+    font-weight: 400;
+    font-size: 20px;
+    background-color: #DD0000;
+    border: 1px solid;
+    border-style: none;
+    border-radius: 5px;
+    padding: 12px 29px;
+    margin-top: 62px;
+}
+
+.main-end-button {
+    text-align: center;
+}
+
+/* Footer Styles */
+.footer-container {
+    color: white;
+    background-color: #161616;
+    height: 444px;
+}
+
+.footer-heading {
+    font-weight: 600;
+    font-size: 40px;
+    padding-top: 130px;
+    color: #FFFFFF;
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+hr {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    width: 1100px;
+    margin-bottom: 50px;
+}
+
+.footer-label ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    color: #B9B9B9;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.footer-label ul>li {
+    margin-left: 30px;
+}
+
+.social-media {
+    text-align: center;
+    margin: 10px;
+}
+
+.social-media a {
+    text-decoration: none;
+    margin-left: 20px;
+    color: aqua;
 }
