--- a/styles/style.css
+++ b/styles/style.css
@@ -114,8 +114,17 @@ body {
     margin: 30px 30px;
     font-weight: 500;
     font-size: 20px;
-    padding: 17px 40px;
+    padding: 17px 0px;
 }
+
+.button-style a {
+    text-decoration: none;
+    color: #161616;
+}
+
+/* .button-style>a:visited {
+    background-color: #DD0000;
+} */
 
 /* Blogs Styles */
 .blogs {
@@ -151,6 +160,8 @@ body {
     font-size: 16px;
     color: rgba(22, 22, 22, 0.7);
     display: flex;
+    margin-top: -10px;
+    margin-bottom: 20px;
 }
 
 .message {
@@ -178,7 +189,55 @@ body {
     text-align: center;
 }
 
-/* Footer Styles */
+/*---------------------------------------
+        Upcoming Match Page Styles
+---------------------------------------*/
+.matches {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: -22px;
+    margin-right: 35px;
+}
+
+.match {
+    border: 1px solid #E8E8E8;
+    border-radius: 10px;
+    background-color: #FFFFFF;
+    margin: 24px 24px;
+}
+
+.team-image {
+    display: flex;
+    align-items: center;
+}
+
+.team-image img {
+    margin: 30px 30px 0px 30px;
+}
+
+.match-title {
+    font-weight: 600;
+    font-size: 20px;
+    text-align: center;
+    color: #161616;
+}
+
+.match-date {
+    font-weight: 400;
+    font-size: 16px;
+    text-align: center;
+    color: #4D4D4D;
+    margin-top: -25px;
+    margin-bottom: 50px;
+}
+
+/*---------------------------------------
+        Button Color For Active Page
+-----------------------------------------*/
+
+/*---------------------------------------
+            Footer Styles
+ --------------------------------------*/
 .footer-container {
     color: white;
     background-color: #161616;
