--- a/styles/style.css
+++ b/styles/style.css
@@ -360,6 +360,7 @@ hr {
     .container {
         flex-direction: column;
         align-items: flex-start;
+        margin-left: 30px;
     }
 
     .box-button {
